Add functional unit test for Actor and Movie service layer