@@ -5,8 +5,6 @@ import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -15,18 +13,14 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
-import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
-import com.movie.example.MovieSpringExampleMicroserviceTestConfiguration;
 import com.movie.example.core.dto.MovieAndActorsDto;
 import com.movie.example.core.dto.MovieDto;
-import com.movie.example.core.entity.Actor;
 import com.movie.example.core.entity.Movie;
 import com.movie.example.core.repository.MovieJpaRepository;
 
 @RunWith(SpringJUnit4ClassRunner.class)
-@SpringJUnitConfig(MovieSpringExampleMicroserviceTestConfiguration.class)
 public class MovieServiceImplTest {
 	
 	@Mock
@@ -38,9 +32,8 @@ public class MovieServiceImplTest {
 	@Before
 	public void setUp() {
 		MockitoAnnotations.initMocks(this);
-		Set<Actor> actorList = new TreeSet<Actor>();
 		List<Movie> movieList = new ArrayList<Movie>();
-		Movie movie = new Movie(new Long(1), "Prueba", "Prueba", 2019, actorList);
+		Movie movie = new Movie(Long.valueOf(1), "Test", "Test", 2019, null);
 		movieList.add(movie);
 		when(movieRepository.findAll()).thenReturn(movieList);
         when(movieRepository.getOne(Mockito.anyLong())).thenReturn(movie);
@@ -48,24 +41,27 @@ public class MovieServiceImplTest {
 	
 	@Test
 	public void shouldGetAMovieList() {
-		
 		List<MovieDto> movies = (List<MovieDto>) movieService.findAll();
-		System.out.print(movies);
 		MovieDto currentMovie = movies.get(0);
 		
-		assertEquals(new Long(1), currentMovie.getId());
+		assertEquals(Long.valueOf(1), currentMovie.getId());
 	}
 
 	@Test
 	public void shouldGetAMovie() {
-		MovieAndActorsDto movieDto = movieService.findOne(new Long(1));
-		assertEquals(new Long(1), movieDto.getId());
+		MovieAndActorsDto movieDto = movieService.findOne(Long.valueOf(1));
+		assertEquals(Long.valueOf(1), movieDto.getId());
 	}
 
 	@Test
 	public void shouldReturnMovieId() {
-		MovieAndActorsDto movie = new MovieAndActorsDto(new Long(1), "Prueba", "Prueba", 2019, null);
+		MovieAndActorsDto movie = new MovieAndActorsDto(Long.valueOf(1), "Test", "Test", 2019, null);
 		
-		assertEquals(new Long(1), movieService.insertOne(movie));
-	} 
+		assertEquals(Long.valueOf(1), movieService.insertOne(movie));
+	}
+	
+	@Test
+	public void shouldReturnTrueIfDeleted() {
+		assertEquals(true, movieService.deleteOne(Long.valueOf(1)));
+	}
 }
